# BooksForge

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EULA.md  EXTERNAL_AUDIT_BACKLOG.md  LICENSE  MILESTONES.md  PRIVACY_POLICY.md  README.md  REFACTOR.md  SECURITY.md  TERMS_OF_SERVICE.md  THIRD_PARTY_LICENSES.md
booksforge/: .env.example  .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  PRODUCT_ROADMAP_E2E.md  about.hbs  deny.toml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json
booksforge/.github/workflows/: ci.yml
booksforge/.sqlx/: query-00c63141a0452e9f25617d8175f37c66be393ac9a38a1c380b8aa95ef51e433f.json  query-046ed03034db333c0a97080425d898210390e2ff11513b861eb37ea0a19ac1c5.json  query-0563344c35379f2a7f8502cc7fa41947e688da0dc2187cb6d6c725a04ca289fa.json  query-10cab2ca17c6e64129867c1c533584334ee32ead87e22b512c8472589e708f2c.json  query-146258baae2c13c8f4192af6d2f88f27f1183e7b0050a6501c6f434eb3166789.json  query-14e0acc6b3ce0011b8eb254082d4b81559c03bd02f5aec967200414ad09ae427.json  query-16e38a09ba02c5a32286c313ae1585dbc65ede68c3163bd051178d16f50ae155.json  query-1915c8fb10a60c5e5e07408aa5490850def2bd7d9adb4e1741f441e4ec539cd9.json  query-2de6c417b5b89f4beb81b29c33588110e9b8ce49ccf60b28435a81b1ce4fef1b.json  query-2e21b73297528fba796ed2986ebb01ac56256b2dd3ce940e02221e8d7f73fab5.json  query-2fe257a61eb0d24d71ddbea5dd06efe4b5ab8a5786e1cdb90af355e027018ab7.json  query-30a8b8924c0e3b8e2140dd473b6a192a0be8ccbfa444217f92c99020f688a730.json  query-30e94387594796ea99d25c0a1188e81df2d858f3fddcbcd1e56207ccc7f97906.json  query-3220496bfec12cda16727d9d2aee35b02e256d1f3427b6e0baf4fbe83c39effb.json  query-4a3ca3d7ecda8e16c08f2460acdf89b9f722da26d89e308913a75906c7fa19e9.json  query-4fd3a0c3ac47d3efaf97c85c8f1fc765f058fd71dc57eb4723adc2bc80511991.json  query-5031a7915b4ffeb3efbb0860bb03a566a2666bfa18478e6db4e87557e4c832a2.json  query-5e5e631aee07eeb09c79db7631d033cdefc3c5d79277e87866d85743a484691c.json  query-5fe8db7ca51c2c285633b8b72c4d384f59e9b0f9834bb3b30e92ce00e95ad675.json  query-630b74d74e2a13a261b2cbb5bcca9c25ea3fcac59ddca2368ff7c94963dcd408.json  query-6361448085c3c07e5b64b49d3925d793cd3207487e2acdca6ef7c8d45a8ff3c3.json  query-643e402fe956b05f3691eec55bd2053b13b6ab6ed9a4690a426e1cf126be0baf.json  query-65b5911f6f0142d2312d2f026f82e643f9bc9e616ba50a90ed57ad425c6becd1.json  query-68106ad9768827f39d06b67a91b527582d3c12d5f9a737091866a343c1add195.json  query-74fa57755a6d3055d03b4ac1a20fb3c09b686871b105c8b3228aea90bd65c997.json  query-814dd0afe7ed08d4b41ff54cdbc880ad9250be360dfed091739815e574b92a2a.json  query-8465b0d12bbc464cfcb5a48a559c924afd25ca5cbbd794bf8220ea3b275f8f61.json  query-855905534324681591f5327bb934907188083c95e62da7aad70fad158490036f.json  query-8681bbb1e3d492db0a225a1081becb4e73fa200ecd2c185669f2b73b0b0002e0.json  query-8886f994e4126e2f5231648cfd19e219bd74d224ca417f4ea6fc492504787167.json  query-898318bf13add306dd19bfb259afa434d8bf1a0360b2e5edc381d9fea657cb0a.json  query-8e7e44e908c4d0a8c8cfc5dd6914b77fa88adb27b23933d42d1ed25ca0666c04.json  query-900b551d120416a82dbeeda87aaecbc001903cfbba4764c88029d08f1602028b.json  query-999ca773d584c81b2780fba408b4798b1dc75bc2483114ca2717511a73018f51.json  query-a35609bd320646487f0f93f26b82c1bc368deefabea34cac165f6b3f9a2bd91e.json  query-a6341c913aa7e520d3a459cdb132aa95a7d933990ceda416107401901af78c2c.json  query-acddc0c439309f660019271751896d8938580e9712a8cb06d61b17823a48ee44.json  query-ad34c724e0d53b2b1cf8a80aa3d8f6bda3ceb5212ecb195204e0128393c5cc9d.json  query-b0f988a799a687f338b1f1ce4df6eba0584264dd80247145c9a6a33df633c8ab.json  query-b38a768dba96d07fa76acb7d380e4855321f19ffa075b706fc676cbd3806cebd.json  (+19 more)
booksforge/apps/desktop/: Cargo.toml  tauri.conf.json
booksforge/apps/desktop/bindings/: BiblesLoadResult.ts  BiblesSaveInput.ts  BiblesSaveResult.ts  BookSceneStageResult.ts  PipelineStageResult.ts  RunBookPipelineInput.ts  RunBookPipelineResult.ts  RunFullScenePipelineInput.ts  RunFullScenePipelineResult.ts  SaveDiagnosticBundleInput.ts
booksforge/apps/desktop/capabilities/: default.json
booksforge/apps/desktop/src/: lib.rs  logging.rs  main.rs  scheduler.rs  state.rs
booksforge/apps/desktop/src-ui/: package.json  vite.config.ts  vitest.config.ts
booksforge/apps/desktop/src-ui-archive-2026-05-11/: _ARCHIVE.md  index.html  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
booksforge/binaries/: README.md
booksforge/crates/booksforge-agents/: Cargo.toml
booksforge/crates/booksforge-agents/src/: audience_mapper.rs  chapter_drafter.rs  chapter_drafter_nf.rs  character_bible.rs  character_critic.rs  (+27 more)
booksforge/crates/booksforge-anti-ai-tells/: Cargo.toml
booksforge/crates/booksforge-domain/: Cargo.toml
booksforge/crates/booksforge-epubcheck/: Cargo.toml
booksforge/crates/booksforge-export/: Cargo.toml
booksforge/crates/booksforge-export-epub/: Cargo.toml
booksforge/crates/booksforge-export-pandoc/: Cargo.toml
booksforge/crates/booksforge-export-typst/: Cargo.toml
booksforge/crates/booksforge-fs/: Cargo.toml
booksforge/crates/booksforge-genre-packs/: Cargo.toml
booksforge/crates/booksforge-ipc/: Cargo.toml
booksforge/crates/booksforge-memory/: Cargo.toml
booksforge/crates/booksforge-ollama/: Cargo.toml  models.toml
booksforge/crates/booksforge-orchestrator/: Cargo.toml
booksforge/crates/booksforge-prompt/: Cargo.toml
booksforge/crates/booksforge-snapshot/: Cargo.toml
booksforge/crates/booksforge-storage/: Cargo.toml
booksforge/crates/booksforge-template/: Cargo.toml
booksforge/crates/booksforge-test-fixtures/: Cargo.toml
booksforge/crates/booksforge-validator/: Cargo.toml
booksforge/crates/booksforge-vocab/: Cargo.toml
booksforge/crates/booksforge-voice/: Cargo.toml
booksforge/docs/: VSM_LLM_OPTIMIZATION.md
booksforge/scripts/: fetch-fonts.sh  fetch-sidecars.sh
booksforge/tests/e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
booksforge/tests/visual-regression/: README.md  package.json  playwright.config.ts  tsconfig.json
(+669 files in other folders)
