[package]
name        = "booksforge-desktop"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[lib]
name          = "booksforge_desktop_lib"
crate-type    = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
booksforge-domain       = { path = "../../crates/booksforge-domain" }
booksforge-ipc          = { path = "../../crates/booksforge-ipc" }
booksforge-storage      = { path = "../../crates/booksforge-storage" }
booksforge-fs           = { path = "../../crates/booksforge-fs" }
booksforge-ollama       = { path = "../../crates/booksforge-ollama" }
booksforge-orchestrator = { path = "../../crates/booksforge-orchestrator" }
booksforge-snapshot     = { path = "../../crates/booksforge-snapshot" }
booksforge-export       = { path = "../../crates/booksforge-export" }
booksforge-export-epub  = { path = "../../crates/booksforge-export-epub" }
booksforge-export-pandoc = { path = "../../crates/booksforge-export-pandoc" }
booksforge-export-typst = { path = "../../crates/booksforge-export-typst" }
booksforge-epubcheck    = { path = "../../crates/booksforge-epubcheck" }
booksforge-voice        = { path = "../../crates/booksforge-voice" }
booksforge-anti-ai-tells = { path = "../../crates/booksforge-anti-ai-tells" }
booksforge-genre-packs  = { path = "../../crates/booksforge-genre-packs" }
booksforge-vocab        = { path = "../../crates/booksforge-vocab" }
booksforge-validator    = { path = "../../crates/booksforge-validator" }
ulid.workspace          = true

tauri.workspace               = true
tauri-plugin-dialog.workspace = true
blake3.workspace              = true
chrono.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
sqlx.workspace               = true
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true
dirs.workspace               = true
zip.workspace                = true
ts-rs.workspace              = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
