[package]
name        = "booksforge-agents"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain  = { path = "../booksforge-domain" }
booksforge-prompt  = { path = "../booksforge-prompt" }
serde.workspace      = true
serde_json.workspace = true
tracing.workspace    = true

# Opt in to workspace-level lints (BACKLOG §C4).
[lints]
workspace = true
