[package]
name        = "booksforge-epubcheck"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-export  = { path = "../booksforge-export" }
thiserror.workspace  = true
tokio.workspace      = true
tracing.workspace    = true
serde.workspace      = true
serde_json.workspace = true
