[package]
name        = "booksforge-epubcheck"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
thiserror.workspace  = true
tokio.workspace      = true
tracing.workspace    = true
serde.workspace      = true
serde_json.workspace = true

# Opt in to workspace-level lints (BACKLOG §C4).
[lints]
workspace = true
