[package]
name        = "booksforge-export-epub"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain  = { path = "../booksforge-domain" }
booksforge-export  = { path = "../booksforge-export" }
serde.workspace      = true
thiserror.workspace  = true
tokio.workspace      = true
blake3.workspace     = true
zip.workspace        = true
chrono.workspace     = true
ulid.workspace       = true

[dev-dependencies]
tempfile = "3"

# Opt in to workspace-level lints (BACKLOG §C4).
[lints]
workspace = true
