[package]
name        = "booksforge-export-pandoc"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain  = { path = "../booksforge-domain" }
booksforge-export  = { path = "../booksforge-export" }
tokio.workspace      = true
tracing.workspace    = true
blake3.workspace     = true
zip.workspace        = true

# Opt in to workspace-level lints (BACKLOG §C4).
[lints]
workspace = true
