[package]
name        = "booksforge-export"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain = { path = "../booksforge-domain" }
serde.workspace     = true
serde_json.workspace = true
thiserror.workspace  = true
ulid.workspace       = true
chrono.workspace     = true

# Opt in to workspace-level lints (BACKLOG §C4).
[lints]
workspace = true
