[package]
name        = "booksforge-fs"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain = { path = "../booksforge-domain" }
async-trait.workspace = true
blake3.workspace      = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
tokio.workspace       = true
toml.workspace        = true
tracing.workspace     = true
ulid.workspace        = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
