[package]
name        = "booksforge-ollama"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain = { path = "../booksforge-domain" }
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
reqwest.workspace    = true
tokio.workspace      = true
async-trait.workspace = true
tracing.workspace    = true
