[package]
name        = "booksforge-ollama"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
toml.workspace       = true
thiserror.workspace  = true
reqwest.workspace    = true
tokio.workspace       = true
tokio-util.workspace  = true
futures-util.workspace = true
async-trait.workspace = true

# BACKLOG §C4: this crate cannot inherit `[lints] workspace = true`
# because workspace policy forbids `unsafe_code` and `probe.rs` uses
# `GlobalMemoryStatusEx` on Windows (an FFI call that requires an
# unsafe block).  Strict policy clippy lints are enforced via inner
# attributes in `lib.rs`.
