[package]
name        = "booksforge-storage"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain  = { path = "../booksforge-domain" }
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
sqlx.workspace       = true
tokio.workspace      = true
async-trait.workspace = true
tracing.workspace    = true
ulid.workspace       = true
chrono.workspace     = true
