[package]
name        = "booksforge-storage"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain  = { path = "../booksforge-domain" }
serde_json.workspace = true
thiserror.workspace  = true
sqlx.workspace       = true
tokio.workspace      = true
async-trait.workspace = true
ulid.workspace       = true
chrono.workspace     = true

[dev-dependencies]
booksforge-vocab = { path = "../booksforge-vocab" }
tempfile         = "3"
blake3           = "1"

[lints]
workspace = true
