[package]
name        = "booksforge-template"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
serde.workspace     = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace      = true

# Opt in to workspace-level lints (BACKLOG §C4).  See root Cargo.toml.
[lints]
workspace = true
