[package]
name        = "booksforge-test-fixtures"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain  = { path = "../booksforge-domain" }
booksforge-ollama  = { path = "../booksforge-ollama" }
async-trait.workspace = true
ulid.workspace        = true
chrono.workspace      = true
serde_json.workspace  = true
tokio.workspace       = true
