[package]
name        = "booksforge-validator"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain = { path = "../booksforge-domain" }
serde.workspace     = true
serde_json.workspace = true
thiserror.workspace  = true

[dev-dependencies]
proptest.workspace = true
