[package]
name        = "booksforge-validator"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain = { path = "../booksforge-domain" }
serde.workspace     = true
serde_json.workspace = true
chrono.workspace     = true
ulid.workspace       = true
blake3.workspace     = true

[dev-dependencies]
proptest.workspace = true

# Opt in to workspace-level lints (BACKLOG §C4).
[lints]
workspace = true
