[package]
name        = "booksforge-vocab"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain = { path = "../booksforge-domain" }
serde.workspace     = true
serde_json.workspace = true
thiserror.workspace  = true
chrono.workspace     = true
ulid.workspace       = true
