[package]
name        = "booksforge-vocab"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true

[dependencies]
booksforge-domain = { path = "../booksforge-domain" }
serde.workspace     = true
thiserror.workspace  = true
toml.workspace       = true

# Opt in to workspace-level lints (BACKLOG §C4).
[lints]
workspace = true
